--- a/css/style.css
+++ b/css/style.css
@@ -48,3 +48,17 @@ footer nav ul{
 footer nav ul li  {
     padding: 10px;
 }
+
+/* estilo do modal */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.6); 
+}
