--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,6 @@ body{
     align-items: center;
     max-height: 80vh;
     overflow: hidden;
-  
 }
 .containerBanner{
     display: flex; 
@@ -36,6 +35,51 @@ body{
     width: 100%;
     height: 100%;
  }
+
+ /* Seção de eventos */
+
+ .section-02{
+    width: 100%;
+    min-height: 80vh;
+    padding: 20px ;
+}
+
+.sectio02Titulo{
+    padding: 40px 0px 0px 20px;
+    text-align: center;
+}
+
+.sectio02Button{
+    padding: 40px;
+    text-align: center;
+}
+
+.containerEventos{
+    display: flex;
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
+    justify-content: center;
+
+}
+
+/* Seção sobre a Sound Garden*/
+
+.section-03{
+    min-height: 80vh;
+    display: flex;
+}
+
+.containerSobre{
+    width: 90%;
+    padding: 50px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 
 aside {
     min-height: 100vh;
@@ -54,15 +98,11 @@ main.login {
     width: 400px;
 }
 
-section.full{
-    width: 100%;
-    min-height: 80vh;
-    padding: 50px 0;
-}
-
 article.evento {
     width: 350px;
 }
+
+/* Footer */
 
 footer nav ul{
     list-style: none;
@@ -85,4 +125,16 @@ footer nav ul li  {
     overflow: auto;
     background-color: rgb(0,0,0); 
     background-color: rgba(0,0,0,0.6); 
+}
+
+/* Pagina eventos */
+.containerTelaEventos{
+    width: 80%;
+    margin: 0 auto;
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: stretch;
+    align-content: space-between;
 }
