--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,8 @@ footer nav ul li  {
 
 /* estilo do modal */
 .modal {
-    display: none;
+    border: 1px solid orange;
+    display: flex;
     position: fixed;
     z-index: 1;
     left: 0;
@@ -125,7 +126,27 @@ footer nav ul li  {
     overflow: auto;
     background-color: rgb(0,0,0); 
     background-color: rgba(0,0,0,0.6); 
+    align-items: center;
+    align-content: center;
 }
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; 
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
+    align-items: center;
+}
+
+#closeBtn {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    padding: 10px;
+}
+
 
 /* Pagina eventos */
 .containerTelaEventos{
